<?xml version="1.0" encoding="utf-8" ?><!--

res/values/string.xmlファイル
-->
<resources>
    <string name="app_name">お気に入り店舗</string>
    <string name="action_settings">Settings</string>
    <!-- リスト画面用 -->
    <string name="tv_title_list">ショップリスト</string>
    <string name="btn_new">新規</string>
    <!-- 編集画面用 -->
    <string name="tv_title_edit">ショップ情報編集</string>
    <string name="tv_title_insert">ショップ情報登録</string>
    <string name="tv_input_title">店名：</string>
    <string name="tv_input_tell">Tell：</string>
    <string name="tv_input_url">URL：</string>
    <string name="tv_input_content">メモ：</string>
    <string name="btn_save">更新</string>
    <string name="btn_insert">登録</string>
    <string name="btn_back">戻る</string>
    <string name="btn_delete">削除</string>
    <string name="msg_input_title">店名を入力してください。</string>
</resources>
